添加登录用户信息查询
