# service/system/api/internal/handler/routes.go
@@ -21,6 +21,11 @@ func RegisterHandlers(server *rest.Server, serverCtx *svc.ServiceContext) {
 			},
 			{
 				Method:  http.MethodPost,
+				Path:    "/system/user/details",
+				Handler: UserDetailsHandleHandler(serverCtx),
+			},
+			{
+				Method:  http.MethodPost,
 				Path:    "/system/user/login",
 				Handler: UserLoginHandleHandler(serverCtx),
 			},
